chore(annotation_converter): add annotation converter command and convertion from voc to yolo format
* chore(annotation_converter): initial commit for annotation converter command and business-logic

* chore(converter): move files from annotation_converter to converter directory

* chore(converter): add base code for converter and reader

* chore(annotation_converter): add voc to yolo format converter

* feat(annotation_converter)!: add yolo writer, finish conversation algorithm from voc to yolo

* refactor(annotation_converter)!:refactor voc to yolo converter to multiprocessing

* refactor(annotation_converter)!:refactor voc to yolo add files writer to convert pipeline for multiprocess writing files

* docs(annotation_converter): add docstrings for voc to yolo convertion logic

* refactor(dhash): remove commented rows

* docs(docs): add mcdocs and documentation

---------

Co-authored-by: Serhii Naumenko <naumenko.s.mail@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-annotated-types
-exceptiongroup
-iniconfig
-numpy
-opencv-python
-packaging
-pillow
-pluggy
-pydantic
-pydantic-settings
-pydantic_core
-Pygments
-pytest
-python-dotenv
-tomli
-typing_extensions
+mkdocs>=1.6.0
+mkdocs-material>=9.5.0
+mkdocstrings[python]>=0.26.0
+mkdocs-autorefs>=1.2.0
+pydantic>=2.10.0
+pydantic-settings>=2.8.0
+python-dotenv>=1.0.0
+PyYAML>=6.0.0
+numpy>=1.24.0,<2.0.0
+opencv-python>=4.8.0
+requests>=2.31.0
+pytest>=8.0.0
+python-dateutil>=2.8.0
+watchdog>=4.0.0
