docs(io): add docstrings to writers and readers

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,14 @@ nav:
           - Base Converter: api/base_converter.md
           - VOC to YOLO converter: api/voc_yolo_converter.md
           - YOLO to VOC converter: api/yolo_voc_converter.md
+      - Reader:
+          - Base reader: api/base_reader.md
+          - XML reader: api/xml_reader.md
+          - TXT reader: api/txt_reader.md
+      - Writer:
+          - Base writer: api/base_writer.md
+          - XML writer: api/xml_writer.md
+          - TXT writer: api/yolo_writer.md
       - Mixins:
           - FileRemoverMixin: api/file_remover.md
   - CLI:
