feat(chore): add empty base structure for implementing stats operation and logic

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,10 +28,12 @@ nav:
       - dedup: operations/deduplicate.md
       - clean-annotations: operations/clean_annotations.md
       - convert-annotations: operations/convert_annotations.md
+      - stats: operations/stats.md
   - API Reference:
       - Main: api/data_forge.md
       - Image Comparer: api/img_comparer.md
       - Video slicer: api/video_slicer.md
+      - CacheIO: api/cache_io.md
       - Hasher:
           - Base Hasher: api/base_hasher.md
           - DHash: api/dhash.md
@@ -49,7 +51,6 @@ nav:
           - TXT writer: api/yolo_writer.md
       - Mixins:
           - FileRemoverMixin: api/file_remover.md
-      - CacheIO: api/cache_io.md
   - CLI:
       - CLI launching: cli/data_forge.md
       - Default Settings: cli/default_values.md
